--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,7 +45,7 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=muhaz
-  license: GPL-3
+  license: GPL-2.0-or-later
   summary: Produces a smooth estimate of the hazard function for censored data.
   license_family: GPL3
   license_file:
